--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "dependencies": {
     "@fontsource/dm-mono": "^5.2.6",
     "@fontsource/solway": "^5.2.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
-    "router": "^2.2.0"
+    "router": "^2.2.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^3.3.1",
+    "variance": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
